[package]
name = "dist-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
prost = "0.12.3"
reedline = "0.28.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tonic = "0.10.2"
arrow-flight = "50.0.0"
tower = "0.4.13"
anyhow = "1.0.79"
dashmap = "5.5.3"
arrow-array = "50.0.0"
arrow = "50.0.0"
